# augmented-query-dataset

./: .gitignore  LICENSE  README.md  pyproject.toml  spacy.conf
sample-queries/: augmented-queries-en-christmas-gifts.json  augmented-queries-en-de-christmas-gifts.json  queries-de-bg-collectibles-[4o]-2.json  queries-de-bg-collectibles-[4o].json  queries-en-de-christmas-gifts.json  queries-en-de-gr-fr-trendy-shoes-[4o].json  queries-en-de-gr-fr-trendy-shoes.json  queries-en-de-trendy-shoes-[4o].json  queries-en-fashion-clothes.json  translated-queries-en-collectibles-[4o]-2.json
src/aquda/: __main__.py
src/aquda/cli/: __init__.py  colour.py  engine.py  run_modes.py
src/aquda/openai/: __init__.py  agent.py
src/aquda/spacy/: conf.py  wordnet.py
src/aquda/text/: processor.py  query.py
