[build-system]
# NOTE: [project.scripts] is not supported by setuptools
# it will just require a package entry point
# https://setuptools.pypa.io/en/latest/userguide/entry_point.html#entry-points
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aquda" # augmented query dataset
version = "0.1.0"
description = """
A tool to generate a free text query dataset from LLM and NLP toolkit.
"""

# https://packaging.python.org/en/latest/specifications/dependency-specifiers/#dependency-specifiers
dependencies = [
  "click",
  "ipython",
  "nltk>=3.9.1",
  "openai>=1.58.1",
  "pydantic>=2.10.4",
  "spacy"
]

authors = [
  { name = "Tao Ruangyam", email = "tao.ruangyam@zalando.de" }
]

maintainers = [
  { name = "Tao Ruangyam", email = "tao.ruangyam@zalando.de" }
]

readme = "README.md"
license = { file = "LICENSE" }

requires-python = "==3.12.*"

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Framework :: IPython",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]



